# CTM-AbsoluteZero

./: CONTEXT_FOR_JULES.md  Cargo.toml  Makefile  README.md  SYNTHESE_COMPLETE.md  justfile
crates/clarity/: Cargo.toml
crates/clarity/src/: lib.rs
crates/fibra/: Cargo.toml
crates/fibra/src/: lib.rs
os-ia-2026/kernel-rust/: Cargo.toml
os-ia-2026/layer1_nkv_rust/: Cargo.toml
os-ia-2026/layer1_nkv_rust/src/: main.rs
os-ia-2026/layer2_clarity_rust/: Cargo.toml  dummy_clarity.txt
os-ia-2026/layer2_clarity_rust/src/: main.rs
os-ia-2026/layer3_aiml_uv/: aiml_parser.py  main.py  pipeline.yaml  pyproject.toml
os-ia-2026/layer4_fibra_bun/: README.md  fibra.ts  package.json
os-ia-2026/layer5_collective_bun/: README.md  collective.ts  package.json  skill.md  soul.md
os-ia-2026/layer6_latent_ui_bun/: README.md  index.html  package.json  server.ts
python/: pyproject.toml
python/src/living/: __init__.py  demo.py  deploy.py  growth.py  network.py  refine.py  skill.py  soul.py
python/tests/: test_growth.py  test_network.py  test_skill.py  test_soul.py
scripts/: fork_refine_merge.sh
specs/: AIML_specification.md  CLARITY_DESIGN.md  LUX_transparent_ai_language.md  MANIFESTE_TECHNIQUE_2026.md  PLAN_ACTION_CONSTRUCTION.md  SPECIFICATIONS_SYSTEM_FINAL.md
src/: lib.rs
src/aiml/: runtime.py
src/clarity/: mod.rs  types.rs
src/collective/: swarm.py
src/fibra/: mod.rs  scheduler.rs
src/living/: __init__.py  demo.py  growth.py  network.py  skill.py  soul.py
src/nkv/: nkv_lsm.c  worm_fs.c
