[project]
name = "living"
version = "0.1.0"
description = "LIVING CODE — Self-introspecting, self-modifying AI agents"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
living-demo = "living.demo:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
